# base32-fs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: encode.rs
ci/: publish.sh
src/: alphabet.rs  decode.rs  encode.rs  error.rs  input.rs  lib.rs  output.rs  path_buf.rs  read.rs  write.rs
