[package]
name = "base32-fs"
version = "0.1.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/igankevich/base32-fs"
repository = "https://github.com/igankevich/base32-fs"
documentation = "https://docs.rs/base32-fs"
readme = "README.md"
description = "A variant of BASE32 encoding for hashes that are used as file names"
keywords = ["base32", "crockford", "fs"]
categories = ["encoding", "filesystem", "no-std"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
default = ["alloc", "std"]
alloc = []
std = []

[dependencies]

[dev-dependencies]
arbitrary = "1.4.1"
arbtest = "0.3.2"
criterion = "0.5.1"

[[bench]]
name = "encode"
harness = false

[lints.clippy]
unwrap_used = "deny"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[lints.rust]
missing_docs = "warn"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu"
]
rustdoc-args = ["--cfg", "docsrs"]
